# note_search

./: .gitignore  CLAUDE.md  Cargo.toml  NEOVIM.md  README.md  note-search-watch.service  test-exec.md
completions/: _note_search
lua/note_search/: README.md  commands.lua  expander.lua  frontmatter.lua  init.lua  linker.lua  markdown-exec.lua  search.lua  subtypes.lua  template.lua  types.lua
man/: note_search.1
note_search_cli/: Cargo.toml
note_search_cli/completions/: note_search.bash
note_search_cli/src/: main.rs
note_search_core/: Cargo.toml
note_search_core/src/: converter.rs  database_service.rs  jira.rs  lib.rs  markdown_parser.rs  query_builder.rs  query_parser.rs
note_search_core/src/commands/: agenda.rs  args.rs  backlinks.rs  browser_history.rs  clear.rs  create_note.rs  elements.rs  import.rs  info.rs  linker.rs  list_names.rs  metadata.rs  mod.rs  search.rs
note_search_core/src/templates/: daily.md.tmpl
note_search_core/src/web/: mod.rs
note_search_core/src/web/static/: index.html
src/: attribute_pair.rs  converter.rs  database_service.rs  jira.rs  lib.rs  main.rs  markdown_parser.rs  query_builder.rs  search_criteria.rs
src/commands/: agenda.rs  args.rs  backlinks.rs  browser_history.rs  clear.rs  convert.rs  import.rs  jira.rs  linker.rs  list_names.rs  mapping.rs  metadata.rs  mod.rs  search.rs
src/web/: mod.rs
test_dir/: Orchard.md  another.md  frontmatter.md  line-number.md  marcus.md  project-note.md  test1.md  test2.md  test_comprehensive.md  test_links.md
test_dir/project/: frontmatter.md
