[package]
name = "note_search"
version = "1.0.0"
edition = "2021"

[lib]
name = "note_search"
path = "src/lib.rs"

[[bin]]
name = "note_search"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust2 = "0.10"
regex = "1.10"
walkdir = "2.5"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "cookies", "json"] }
scraper = "0.19"
html2md = "0.2"
docx-rs = "0.4"
lopdf = "0.32"
url = "2.5"
dirs = "5.0"
mail-parser = "0.11"
msg_parser = "0.3"
strsim = "0.11"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
